--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 		　様々な入力フォーム<br>
 		<font size="2" face=sans-serif>
 		　勉強のため、入力フォームを複数作成しました。<br>
-		　
+		　ただの入力フォ－ムながら、少し工夫しているもの、条件を満たさないとエラーになる設定で作っています。<br>
+		　順次追加を予定。<br>
 		　</font></b></span><br>
 	</tr>
 
